Small readability refactor.